# PaulusAI

./: .env  .env.example  .gitattributes  .gitignore  README.md  affect.py  agent.py  bsky_post.py  bsky_read_feed.py  bsky_setup.py  config.py  index.html  llm.py  main.py  memory.py  pyproject.toml  requirements.txt  sandbox.py  security.py  skills.py  tools.py  vectorstore.py
.github/workflows/: ci.yml
bsky_env/: pyvenv.cfg
deploy/: paulus-gateway.service
inbox/: message.txt
payment_backend/: .env.example  .gitignore  README.md  requirements.txt
payment_backend/config/: settings.py
payment_backend/payments/: admin.py  middleware.py  models.py  paulus_client.py  services.py  telegram.py  tests.py  urls.py  views.py
payment_backend/payments/migrations/: 0001_initial.py
payment_system/: core.py  django_bridge.py  router.py  ton_client.py
src/paulus/: __init__.py  __main__.py  affect.py  agent.py  appraisal.py  billing.py  cli.py  config.py  gateway_main.py  llm.py  memory.py  router.py  sandbox.py  security.py  skills.py  tools.py  vectorstore.py  web.py
src/paulus/gateway/: __init__.py  base.py  presence.py  runner.py  session_store.py
src/paulus/payments/: __init__.py  _http.py  backend.py  gate.py  inspect.py  router.py  service.py  ton.py
tests/: conftest.py  test_affect.py  test_appraisal.py  test_billing.py  test_billing_gate_agent.py  test_config.py  test_consolidation.py  test_gateway.py  test_llm.py  test_memory.py  test_payments.py  test_router.py  test_sandbox.py  test_security.py  test_skills.py  test_web.py
